--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="author" content="Gabriel Sena">
     <title>Gabriel Sena</title>
     
+    <!-- Favicon -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -71,7 +74,7 @@
     <section id="projetos">
         <div class="section-title fade-in">
             <h2>Projetos</h2>
-            <p>Todos os meus trabalhos em destaque</p>
+            <p>Trabalhos em destaque</p>
         </div>
 
         <div class="carousel-container">
